increased notification sidebar z-index, decreased toolbar z-index because of the notification sidebar backdrop + added z-index to the left sidebar for fixing shadows

--- a/src/app/sidenav/navigation/_nav-sidenav.scss
+++ b/src/app/sidenav/navigation/_nav-sidenav.scss
@@ -4,6 +4,7 @@
 $navSidabarWidth: 240px;
 
 .site-sidenav {
+    z-index: 70;
 
     .nav-header {
         height: 64px;
