--- a/src/app/sidenav/notification/_notification-sidenav.scss
+++ b/src/app/sidenav/notification/_notification-sidenav.scss
@@ -7,7 +7,7 @@ $notificationSidabarWidth: 330px;
     width: $notificationSidabarWidth;
     min-width: $notificationSidabarWidth;
     max-width: $notificationSidabarWidth;
-    z-index: 62;
+    z-index: 99;
     md-content {
         md-tabs {
             md-tabs-wrapper {
