--- a/src/app/toolbar/_toolbar.scss
+++ b/src/app/toolbar/_toolbar.scss
@@ -2,7 +2,7 @@ $toolbarHeight: 64px;
 #main-toolbar {
     height: $toolbarHeight;
     min-height: $toolbarHeight;
-    z-index: 61;
+    z-index: 55;
     .search {
         margin: 0 0 0 24px;
         padding: 0;
